Fixing a typo in the UI message

--- a/priv/admin/js/templates/all_unavailable_chart.hbs
+++ b/priv/admin/js/templates/all_unavailable_chart.hbs
@@ -10,7 +10,7 @@
   <section class="details">
     <div class="actions-pointer actions-pointer-right"></div>
     <h4 class="gui-headline-bold">
-      Preference lists where all primary repliacs are unavailable.
+      Preference lists where all primary replicas are unavailable.
     </h4>
     {{#if allUnavailableExist}}
     {{allUnavailableCount}} partitions have all of their
