--- a/priv/admin/js/templates/quorum_unavailable_chart.hbs
+++ b/priv/admin/js/templates/quorum_unavailable_chart.hbs
@@ -11,7 +11,7 @@
   <section class="details">
     <div class="actions-pointer actions-pointer-center"></div>
     <h4 class="gui-headline-bold">
-      Preference lists where a majority of primary repliacs are unavailable.
+      Preference lists where a majority of primary replicas are unavailable.
     </h4>
     {{#if quorumUnavailableExist}}
     {{quorumUnavailableCount}} partitions have a majority
